8341273: JVMTI is not properly hiding some continuation related methods